[package]
name = "librualg"
description = "Collection of basic algorithms for everyday development"
license = "MIT"
repository = "https://github.com/myduomilia/librualg"
version = "0.26.0"
authors = ["myduomilia <myduomilia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"
